# rust_in_action

./: Cargo.toml
chapter-3/: Cargo.toml
chapter-3/src/: list3-1.rs  list3-10.rs  list3-12.rs  list3-13.rs  list3-16.rs  list3-2.rs  list3-3.rs  list3-4.rs  list3-5.rs  list3-7.rs  list3-8.rs  vec_clone.rs
chapter-3/src/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
chapter-3/src/doc/list3_16/: all.html  enum.FileState.html  index.html  sidebar-items.js  struct.File.html
chapter-3/src/doc/search.desc/list3_16/: list3_16-desc-0-.js
chapter-3/src/doc/src/list3_16/: list3-16.rs.html
chapter-3/src/doc/trait.impl/core/cmp/: trait.PartialEq.js
chapter-3/src/doc/trait.impl/core/fmt/: trait.Debug.js
chapter-3/src/doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
chapter-3/src/doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
chapter-4/: Cargo.toml
chapter-4/src/: list4-1.rs  list4-18.rs  list4-19.rs  list4-2.rs  list4-20.rs  list4-5.rs  list4-6.rs
chapter-5/: Cargo.toml
chapter-5/src/: chip-8.rs  list5-1.rs  list5-2.rs  list5-22.rs  list5-26.rs  list5-29.rs  list5-3.rs  list5-5.rs  list5-6.rs  list5-7.rs  list5-8.rs
chapter-6/: Cargo.toml
chapter-6/src/: list6-2.rs  list6-4.rs  list6-5.rs  list6-6.rs  list6-7.rs
grep-lite/: Cargo.toml
grep-lite/src/: list2-23.rs  list2-24.rs  list2-26.rs  list2-27.rs  list2-29.rs  list2-30.rs
src/: list2-11.rs  list2-12.rs  list2-14.rs  list2-15.rs  list2-18.rs  list2-21.rs  list2-22.rs  list2-3.rs  list2-4.rs  list2-5.rs  list2-6.rs  list2-7.rs  list2-8.rs  main.rs
