[package]
name = "rust_in_action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "list2-3"
path = "src/list2-3.rs"

[[bin]]
name = "list2-4"
path = "src/list2-4.rs"

[[bin]]
name = "list2-5"
path = "src/list2-5.rs"

[[bin]]
name = "list2-6"
path = "src/list2-6.rs"

[[bin]]
name = "list2-7"
path = "src/list2-7.rs"

[[bin]]
name = "list2-8"
path = "src/list2-8.rs"

[[bin]]
name = "list2-10"
path = "src/list2-10.rs"

[[bin]]
name = "list2-11"
path = "src/list2-11.rs"

[[bin]]
name = "list2-12"
path = "src/list2-12.rs"

[[bin]]
name = "list2-14"
path = "src/list2-14.rs"

[[bin]]
name = "list2-15"
path = "src/list2-15.rs"

[[bin]]
name = "list2-18"
path = "src/list2-18.rs"

[[bin]]
name = "list2-21"
path = "src/list2-21.rs"

[[bin]]
name = "list2-22"
path = "src/list2-22.rs"

[dependencies]
num = "0.4.3"
