[package]
name = "chapter-3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list3-1"
path = "src/list3-1.rs"

[[bin]]
name = "list3-2"
path = "src/list3-2.rs"

[[bin]]
name = "list3-3"
path = "src/list3-3.rs"

[[bin]]
name = "list3-4"
path = "src/list3-4.rs"

[[bin]]
name = "list3-5"
path = "src/list3-5.rs"

[dependencies]
