[package]
name = "chapter-3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list3-1"
path = "src/list3-1.rs"

[[bin]]
name = "list3-2"
path = "src/list3-2.rs"

[[bin]]
name = "list3-3"
path = "src/list3-3.rs"

[[bin]]
name = "list3-4"
path = "src/list3-4.rs"

[[bin]]
name = "list3-5"
path = "src/list3-5.rs"

[[bin]]
name = "list3-7"
path = "src/list3-7.rs"

[[bin]]
name = "list3-8"
path = "src/list3-8.rs"

[[bin]]
name = "list3-10"
path = "src/list3-10.rs"

[[bin]]
name = "list3-11"
path = "src/list3-11.rs"

[[bin]]
name = "list3-12"
path = "src/list3-12.rs"

[[bin]]
name = "list3-13"
path = "src/list3-13.rs"

[[bin]]
name = "list3-16"
path = "src/list3-16.rs"

[[bin]]
name = "vec_clone"
path = "src/vec_clone.rs"

[dependencies]
rand = "0.8.5"
