[package]
name = "chapter-5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list5-1"
path = "src/list5-1.rs"

[[bin]]
name = "list5-2"
path = "src/list5-2.rs"

[[bin]]
name = "list5-3"
path = "src/list5-3.rs"

[[bin]]
name = "list5-5"
path = "src/list5-5.rs"

[[bin]]
name = "list5-6"
path = "src/list5-6.rs"

[[bin]]
name = "list5-7"
path = "src/list5-7.rs"

[[bin]]
name = "list5-8"
path = "src/list5-8.rs"

[[bin]]
name = "chip-8"
path = "src/chip-8.rs"

[[bin]]
name = "list5-22"
path = "src/list5-22.rs"

[dependencies]

