[package]
name = "chapter-6"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list6-1"
path = "src/list6-1.rs"

[[bin]]
name = "list6-2"
path = "src/list6-2.rs"

[[bin]]
name = "list6-4"
path = "src/list6-4.rs"

[[bin]]
name = "list6-5"
path = "src/list6-5.rs"

[[bin]]
name = "list6-6"
path = "src/list6-6.rs"

[[bin]]
name = "list6-7"
path = "src/list6-7.rs"

[dependencies]
