[package]
name = "grep-lite"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list2-23"
path = "src/list2-23.rs"

[[bin]]
name = "list2-24"
path = "src/list2-24.rs"

[[bin]]
name = "list2-26"
path = "src/list2-26.rs"

[[bin]]
name = "list2-27"
path = "src/list2-27.rs"

[[bin]]
name = "list2-28"
path = "src/list2-28.rs"

[[bin]]
name = "list2-29"
path = "src/list2-29.rs"

[dependencies]
clap = "2"
regex = "1"
